# fusuk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
playground/: test.py
src/fusuk/: __init__.py  generator.py
src/fusuk/data/: uk_first_names.json  us_first_names.json
